--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,18 @@
 {
   "root": true,
-  "ignorePatterns": [
-    "projects/**/*"
-  ],
+  "ignorePatterns": ["projects/**/*"],
   "overrides": [
     {
-      "files": [
-        "*.ts"
-      ],
+      "parserOptions": {
+        "ecmaVersion": "latest"
+      },
+
+      "env": {
+        "es6": true
+      }
+    },
+    {
+      "files": ["*.ts"],
       "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
@@ -35,28 +40,17 @@
       }
     },
     {
-      "files": [
-        "*.html"
-      ],
-      "extends": [
-        "plugin:@angular-eslint/template/recommended"
-      ],
+      "files": ["*.html"],
+      "extends": ["plugin:@angular-eslint/template/recommended"],
       "rules": {}
     },
     {
       "files": ["*.html"],
-      "excludedFiles": [
-      "*inline-template-*.component.html"
-      ],
+      "excludedFiles": ["*inline-template-*.component.html"],
       "extends": ["plugin:prettier/recommended"],
       "rules": {
-      "prettier/prettier": [
-      "error",
-      { "parser": "angular" }
-      ]
+        "prettier/prettier": ["error", { "parser": "angular" }]
       }
-      }
-      ]
-      }
-
-
+    }
+  ]
+}
