--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "deploy": "touch ./output_folder/.nojekyll && gh-pages -d output_folder -t true",
     "test": "ng test",
     "lint": "ng lint",
     "format": "prettier --write src"
   },
+
+  
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
