--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     "lint": "ng lint",
     "format": "prettier --write src"
   },
-
-  
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
@@ -29,6 +27,7 @@
     "angular-in-memory-web-api": "^0.15.0",
     "bootstrap": "^5.3.2",
     "rxjs": "~7.8.0",
+    "terser": "^5.31.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
